S2BeanUtils (org.seasar.framework.beans.util) を org.seasar.util.beans.util パッケージに移動しました．
git-svn-id: https://www.seasar.org/svn/sandbox/s2util/trunk@71 03a6405a-cd80-4c0c-ae08-6356e5c5245e